--- a/em.tex
+++ b/em.tex
@@ -561,7 +561,7 @@ $\vec{A}$. Вычислим его поток (наружу) через пове
 функции вдоль этой же кривой.
 
 Вскоре мы выясним, что есть ещё одна теорема похожего типа. Но для
-начала посмотрим, на ещё может сгодиться оператор $\vn$. 
+начала посмотрим, на что ещё может сгодиться оператор $\vn$. 
 
 \subsection{Ротор.}
 \label{sec:curl}
