Stokes theorem; relations with divrot and rotgrad.

--- a/em.tex
+++ b/em.tex
@@ -548,7 +548,7 @@ $\vec{A}$. Вычислим его поток (наружу) через пове
 
 \begin{equation}
   \label{eq:theorem_gauss_ostograd}
- =\int_V \div \vec{A}\, dV =  \int_S \vec{A} \cdot  d\vec{S}.
+  \int_V \div \vec{A}\, dV =  \int_S \vec{A} \cdot  d\vec{S}.
 \end{equation}
 
 Заметим, что это соотношение чем-то похоже на теорему о градиенте
@@ -589,6 +589,92 @@ $\vec{A}$. Вычислим его поток (наружу) через пове
 физический смысл этого вектора тесно связан с вихрями в потоке
 жидкости (или в любом другом векторном поле).
 
+Можно ли как-то выяснить физический смысл ротора аналогично
+дивергенции и градиенту? Сейчас мы получим нечто, аналогичное теореме
+Гаусса--Остроградского. Если в случае с дивергенцией мы интегрировали
+поле по поверхности маленького кубика, то в случае с ротором надо
+интегрировать по границе маленького квадрата (так подсказывает наша
+интуиция).
+
+\begin{wrapfigure}{r}{40mm}
+  \vspace{-0.8cm}
+  \begin{center}
+    \includegraphics[width=4cm,height=4cm]{pics/stokes.pdf}
+  \end{center}
+  \vspace{-0.7cm}
+  \caption{Вычисление циркуляции.}
+  \label{fig:stokes}
+  \vspace{2cm}
+\end{wrapfigure}
+
+
+Рассмотрим, например, квадрат, расположенный в плоскость $xy$ со
+сторонами $\Delta x$, $\Delta y$. Вычислим циркуляцию поля $\vec{A}$
+по этому квадрату. Также как и в случае с потоком, полная циркуляция
+складывается из циркуляций по каждому ребру. Посмотрим, например, на
+ребро 1. Циркуляция по нему равна
+
+\begin{equation}
+  \label{eq:theorem_curl_1}
+  C_1 = \int A_x (x,y) d x = A_x (x,y) \Delta x. 
+\end{equation}
+
+Здесь мы, как и в предыдущем пункте, воспользовались тем, что
+квадратик маленький, а значит, поле на его ребре можно считать
+постоянным вдоль ребра. Коль так, то поле можно вынести за знак
+интеграла, ну а интеграл от $dx$ даст просто длину ребра. Проводя
+аналогичную операцию для остальных рёбер, получим в сумме для
+циркуляции
+
+\begin{equation}
+  \label{eq:theorem_curl_2}
+  C_{xy} = C_1 + \ldots C_4 = \Delta x
+  \left(
+    A_x (x,y) - A_x(x,y+\Delta y)
+  \right) + \Delta y
+  \left(
+    A_y (x+\Delta x, y) - A_y (x,y)
+  \right).
+\end{equation}
+
+Раскладывая разность в скобках (наш контур считается малым), получим:
+
+\begin{equation}
+  \label{eq:theorem_curl_3}
+  C_{xy} = \Delta x \Delta y \left(\frac{\pt A_y}{\pt x} - \frac{\pt A_x}{\pt y}\right).
+\end{equation}
+
+У нас получилось, что циркуляция поля вдоль контура, лежащего в
+плоскости $xy$ равна площади этого контура $\Delta x \Delta y$,
+умноженной на компоненту $z$ ротора поля $C$ (см. формулу
+\eqref{eq:def_curl}). Компонента $z$ в данном случае --- нормальная
+составляющая ротора по отношению к плоскости $xy$. Таким образом,
+можно написать, что
+\begin{equation}
+  \label{eq:theorem_curl_4}
+  \oint \vec{A} \cdot d\vec{l} = \rot \vec{A} \cdot \vec{n}\, \Delta S.
+\end{equation}
+
+Если теперь просуммировать циркуляции по всем маленьким контурам на
+нашей поверхности $S$, получится \emph{теорема Стокса}:
+
+\begin{equation}
+  \label{eq:theorem_curl_5_stokes}
+  \oint \vec{A} \cdot d \vec{l} = \int_S \rot \vec{A} \cdot \vec{n} \,
+  dS = \int_S \rot \vec{A} \cdot d\vec{S}.
+\end{equation}
+
+Опять, по аналогии с дивергенцией, заметим, что теорема связывает
+нечто одномерное по сути (циркуляцию) с чем-то двумерным (интеграл по
+поверхности от ротора). В каком-то смысле, теорема о градиенте
+\eqref{eq:def_curve_int_3}, теорема Гаусса--Остроградского
+\eqref{eq:theorem_gauss_ostograd} и теорема Стокса
+\eqref{eq:theorem_curl_5_stokes} --- частные случаи одного более
+общего соотношения, про которое здесь мы говорить не будем. 
+
+\subsection{Операции с $\vn$.}
+\label{sec:nabla}
+
 Сейчас мы начнём получать дивиденды от записи векторных операций через
 оператор $\vn$. Попробуем составить всякие комбинации с двумя
 операторами $\vn$. Например, возьмём скалярное поле $\phi$, возьмём
@@ -611,18 +697,45 @@ $\vec{A}$. Вычислим его поток (наружу) через пове
   \vn \times (\vn \phi) = \rot \grad \phi = 0.
 \end{equation}
 
+Если мы применим к вектору $\grad \phi$ теорему Стокса
+\eqref{eq:theorem_curl_5_stokes}, то получится
+
+\begin{equation}
+  \label{eq:stokes_gradient}
+  \oint \grad \phi \cdot d\vec{l} = \int \rot \grad \phi \cdot
+  d\vec{S} = 0.
+\end{equation}
+
+То есть, циркуляция градиента всегда равна нулю. Вспомним, что мы уже
+видели это свойство в формуле \eqref{eq:int_grad}. Там мы её
+доказывали напрямую, руками. А с помощью формальной операции $\vn$ и
+теоремы Стокса мы получили это соотношение бесплатно.
+
 Рассмотрим теперь комбинацию $ \vec{A} \cdot (\vec{A} \times
 \vec{B})$. Вектор $\vec{A} \times \vec{B}$ перпендикулярен $\vec{A}$
 (см. рис. \ref{fig:curl}), поэтому это произведение равно
 нулю. Возьмём теперь в качестве $\vec{A} = \vn$, а в качестве
-$\vec{B}$ какое--нибудь векторное поле $\vec{V}$. Получаем
+$\vec{B}$ какое--нибудь векторное поле $\vec{X}$. Получаем
 
 \begin{equation}
   \label{eq:div_rot}
-  \vn \cdot (\vn \times \vec{V}) = 0 = \div \rot \vec{V}.
+  \vn \cdot (\vn \times \vec{X}) = 0 = \div \rot \vec{X}.
 \end{equation}
 
-Отметим, что эти соотношения верны для \textbf{любых} полей $\phi$ и
+Применим к вектору $\rot \vec{X}$ теорему Гаусса--Остроградского
+\eqref{eq:theorem_gauss_ostograd}:
+
+\begin{equation}
+  \label{eq:gauss_rot}
+  \int_S \rot \vec{X} \cdot d\vec{S} = \int_V \div \rot \vec{X}\, dV = 0.
+\end{equation}
+
+Итак, мы получили, что поток вектора $\rot \vec{X}$ всегда равен
+нулю. Это значит, что вихревое поле не создают никакие источники:
+силовые линии не имеют начала и конца. Таково, например, магнитное
+поле, но это мы увидим позже.
+
+Отметим, что эти соотношения верны для любых полей $\phi$ и
 $\vec{V}$. Однако, не все соотношения с двумя операторами $\vn$ равны
 нулю. К примеру, мы могли подействовать на градиент не ротором, а
 дивергенцией:
@@ -638,7 +751,7 @@ $\vec{V}$. Однако, не все соотношения с двумя опе
 (поскольку дивергенция --- скалярное поле). 
 
 Раз оператор лапласиана скалярный, значит, он может действовать и на
-вектор, т.е. на каждую компоненту вектора. 
+вектор, т.е. на каждую компоненту вектора:
 
 \begin{equation}
   \vn^2 \vec{A} = \vn^2 A_x \vec{i} + \vn^2 A_y \vec{j} + \vn^2 A_z \vec{k}.
