Electrostatics analogies: heat and hydrodynamics

--- a/em.tex
+++ b/em.tex
@@ -14,6 +14,7 @@
 \newcommand{\rot}{\mathrm{rot}\,}
 \renewcommand{\div}{\mathrm{div}\,}
 \newcommand{\vn}{\vec{\nabla}}
+\newcommand{\eps}{\epsilon}
 
 \graphicspath{{./pics/}}
 \title{Электродинамика}
@@ -768,10 +769,10 @@ $\vec{B}$ какое--нибудь векторное поле $\vec{X}$. Пол
 %   \vn^2 \vec{A} = \vn^2 A_x \vec{i} + \vn^2 A_y \vec{j} + \vn^2 A_z \vec{k}.
 % \end{equation} 
 
-\section{Статика.}
+\section{Электростатика.}
 \label{sec:statics}
 
-\subsection{Закон Кулона.}
+\subsection{Теорема Гаусса.}
 \label{sec:coulomb}
 
 После подготовительных математических процедур мы можем приступить
@@ -782,74 +783,46 @@ $\vec{B}$ какое--нибудь векторное поле $\vec{X}$. Пол
 рассматриваются). 
 
 В качестве аксиомы электростатики нам необходим какой-нибудь опытный
-факт. За основу можно взять \textbf{закон Кулона}, который для
-точечного заряда формулируется так: между двумя покоящимися зарядами
-действует сила, пропорциональная зарядам и обратно пропорциональная
-квадрату расстояния между ними:
+факт. Мы поступим немного нестандартным образом, а именно, возьмём за
+основу факт, который именуется \textbf{теоремой Гаусса}. Возьмём
+систему зарядов с полным зарядом $Q$ (это могут быть несколько
+точечных зарядов, или заряд, размазанный по объёму). Окружим эту
+систему зарядов поверхностью $S$. Тогда теорема Гаусса утверждает, что
+поток электрического поля через эту поверхность равен
 
+\begin{equation}
+  \label{eq:theorem_gauss}
+  \Phi = \int_S \vec{E} \cdot d\vec{S} = \frac{Q}{\epsilon_0}.
+\end{equation}
+
+Это достаточно общее утверждение, намного более общее, чем закон
+Кулона (поэтому мы и взяли его за основу). В отличие от закона Кулона,
+который не выполняется в случае электродинамики, теорема Гаусса
+выполняется всегда. 
+
+Кроме того, нам понадобится \textbf{принцип суперпозиции}: сила,
+действующая на заряд, есть векторная сумма сил, действующих со стороны
+прочих зарядов. По сути дела, это единственные аксиомы электростатики.
+
+Из теоремы Гаусса получить закон Кулона очень просто. Возьмём точечный
+заряд $q$, окружим его сферой радиуса $r$ и подсчитаем поток через эту
+сферу. Ясно, что поле одного точечного заряда сферически симметрично,
+поэтому на всех точках сферы оно будет одно и то же (поскольку зависит
+лишь от расстояния до заряда). Раз так, то можно упростить интеграл
+\eqref{eq:theorem_gauss}: 
 \begin{equation}
   \label{eq:law_coulomb}
-  \vec{F} = k \frac{q_1 q_2 \vec{r}}{r^3}.
+  \int_S E(r)\, dS = E(r) \int_S dS = E(r) 4\pi r^2 =
+  \frac{q}{\eps_0}, \quad E(r) = k\frac{q}{r^2}.
 \end{equation}
 
-Кроме того, имеется \textbf{принцип суперпозиции}: сила, действующая
-на заряд, есть векторная сумма сил, действующих со стороны прочих
-зарядов. По сути дела, это единственные аксиомы электростатики. 
+Это и есть \textbf{закон Кулона}: между двумя покоящимися зарядами
+действует сила, пропорциональная зарядам и обратно пропорциональная
+квадрату расстояния между ними (напомним, что сила равна $\vec{F} = q_0
+\vec{E}$).
 
-Вместо силы можно ввести \textbf{напряжённость электрического поля}
-$\vec{E}$: сила, с которой данное поле действует на единичный заряд.
-
-\begin{equation}
-  \label{eq:def_intensity_1}
-  \vec{E} = k \frac{q \vec{r}}{r^3}.
-\end{equation}
-
-Если же зарядов много и они распределены по какому-то объёму, то можно
-записать более общее определение:
-
-\begin{equation}
-  \label{eq:def_intensity_2}
-  \vec{E} = k \int \frac{\rho(\vec{r})\, \vec{r}}{r^3} dV.
-\end{equation}
-
-Таким образом, по данному распределению зарядов $\rho(\vec{r})$ можно
-всегда вычислить напряжённость поля (если вы, конечно, умеете
-интегрировать). 
-
-% Напоследок рассмотрим важный вопрос об объёмной плотности
-% электрического заряда. Понятно, что во всех точках пространства, где
-% заряда нет, его объёмная плотность равна нулю. В точке, где сидит
-% заряд, плотность равна бесконечности. Кроме того, плотность
-% фиксируется соотношением
-
-% \begin{equation}
-%   \label{eq:def_delta_1}
-%    q = \int \rho (\vec{r}) dV.
-% \end{equation}
-
-% Функция, которая удовлетворяет такому соотношению, называется
-% \textbf{дельта--функцией Дирака} $\delta(\vec{r})$. Она определяется
-% именно так, как показано выше.
-
-% У дельта--функции есть несколько интересных свойств, одно из них мы
-% обсудим. Проинтегрируем произвольную функцию $f(x)$ с дельта--функцией:
-
-% \begin{equation}
-%   \label{eq:delta_2}
-%   \int f(x)\, \delta (x-a) dx = f(a).
-% \end{equation}
-
-% Понятно, почему так происходит: дельта--функция как бы <<вырезает>>
-% одно значение функции $f(x)$ и от всего интеграла остаётся лишь одна
-% точка. 
-
-% Также можно рассмотреть трёхмерную дельта--функцию, собственно, она и
-% описывает плотность точечного заряда в пространстве. 
-
-% \begin{equation}
-%   \label{eq:delta_3d}
-%   \delta(\vec{r}) = \delta(x) \delta (y) \delta(z).
-% \end{equation}
+Таким образом, мы видим, что для статических точечных зарядов теорема
+Гаусса эквивалентна закону Кулона. 
 
 \subsection{Потенциал.}
 \label{sec:potential}
@@ -896,7 +869,7 @@ $\phi$. Применим это к нашему случаю:
 
 \begin{equation}
   \label{eq:def_potential}
-  \vec{E}  = -\grad \phi. 
+  \vec{E}  = -\grad \phi = -\vn \phi.
 \end{equation}
 
 Знак минус в нашем определении стоит для удобства пользования. 
@@ -942,52 +915,343 @@ $\phi$. Мы же просто угадаем ответ:
 Для потенциалов тоже действует принцип суперпозиции: потенциал системы
 зарядов равен сумме потенциалов каждого заряда по отдельности. 
 
-\subsection{Теорема Гаусса.}
-\label{sec:theorem_gauss}
+\subsection{Дивергенция.}
+\label{sec:statics_div}
 
-С циркуляцией мы разобрались, теперь нужно вычислить поток нашего
-электрического поля. Опять же, эта задача выглядит вполне решаемой: у
-нас есть явное выражение для электрического поля, явная формула для
-дивергенции $\div \vec{E}$, так что осталось подставить одно в другое,
-и ответ готов. 
-
-Но не тут-то было! Если мы вычислим дивергенцию честно, то окажется,
-что она равна нулю. Но такого не может быть --- мы ведь знаем, что
-дивергенция меряет мощность источника. Мы точно знаем, что источник у
-нас есть (точечный заряд), а дивергенция говорит, что нет. Разгадка
-кроется в точке, где находится источник: дело в том, что дивергенция в
-этой точке обращается в бесконечность, а во всех остальных точках
-действительно равна нулю.
-
-Кроме того, мы можем честно вычислить поток электрического поля через
-сферу радиуса $R$, которая окружает заряд $q$. Поскольку поле
-направлено по радиусу, интеграл \eqref{eq:def_flux} сводится просто к
-умножению одного на другое:
+Теорему Гаусса можно переписать в более компактном и удобном виде
+(перейти от интегралов к дифференциальным операциям). Именно, вспомним
+теорему Гаусса--Остроградского \eqref{eq:theorem_gauss_ostograd} и
+применим её к теореме просто Гаусса \eqref{eq:theorem_gauss}:
 
 \begin{equation}
-  \label{eq:gauss_1}
-  \Phi = \int \vec{E} \cdot d\vec{S} = E(R) 4\pi R^2 = 4\pi k q.
+  \label{eq:statics_div_1}
+  \int_V \div \vec{E} \cdot dV = \frac{Q}{\eps_0}.
 \end{equation}
 
-То есть, поток не зависит от $R$ и всегда постоянный и зависит только
-от величины заряда внутри. Кроме того, можно показать, что и от формы
-поверхности, окружающей заряд, тоже ничего не зависит.
-
-Вспомним теперь теорему Гаусса--Остроградского
-\eqref{eq:theorem_gauss_ostograd}. Видно, что для того, чтобы она
-сочеталась с предыдущей формулой, необходимо и достаточно
+Итак, интеграл от дивергенции по объёму равен заряду (с точностью до
+коэффициента). Что это означает? От чего ещё интеграл по объёму даёт
+заряд? Разумеется, от объёмной плотности заряда (она вводится
+абсолютно по аналогии с обычной плотностью). Тем самым, можно
+написать, что 
 
 \begin{equation}
-  \label{eq:theorem_gauss_diff}
-  \div \vec{E} = 4\pi k \rho,
+  \label{eq:statics_div_2}
+  \div \vec{E} = \frac{\rho}{\eps_0}.
 \end{equation}
-т.к. $\int \rho\, dV$ и есть полный заряд, сосредоточенный в окружённом
-объёме. 
 
-Это нестрогое рассуждение иллюстрирует тот факт, что поток
-электростатического поля через какую-либо поверхность всегда
-определяется только зарядом, который находится в пределах этой
-поверхности. Это и есть \textbf{теорема Гаусса}. 
+Это --- теорема Гаусса в альтернативной формулировке. Иногда она
+удобнее, чем в исходном виде, потому что с её помощью можно эффективно
+решить основную задачу электростатики --- по данному распределению
+зарядов найти поля. 
 
+Как это делается? Очень просто. Подставим определение потенциала
+\eqref{eq:def_potential} в теорему Гаусса:
+
+\begin{equation}
+  \label{eq:poisson_1}
+  \div \grad \phi =( \vn \cdot \vn) \phi =  -\frac{\rho}{\eps_0}. 
+\end{equation}
+
+Что такое оператор $\vn^2$, стоящий в скобках? Мы можем формально
+умножить вектор $\vn$ сам на себя: 
+
+\begin{equation}
+  \label{eq:poisson_2}
+  \vn \cdot \vn = \frac{\pt^2}{\pt x^2} + \frac{\pt^2}{\pt y^2} + \frac{\pt^2}{\pt z^2}.
+\end{equation}
+
+Оператор такого вида называется \textbf{лапласианом}, и иногда
+обозначается буквой $\Delta$. Он дифференцирует два раза функцию по
+каждой переменной и складывает результаты. Таким образом, мы можем
+переписать уравнение для потенциала в форме
+
+\begin{equation}
+  \label{eq:poisson_3}
+  \Delta \phi = -\frac{\rho}{\eps_0}.
+\end{equation}
+
+Это --- \textbf{уравнение Пуассона}. Оно связывает распределение
+зарядов $\rho$ с потенциалом $\phi$. Иногда легче решить это
+уравнение, получить потенциал и взять градиент, чтобы получить поле
+$\vec{E}$. 
+
+Теорему Гаусса можно использовать для доказательства ещё одного
+фундаментального факта: в электрическом поле (при условии отсутствия
+других сил) невозможно механическое равновесие. Ни в каком
+электростатическом поле не существует точек устойчивого равновесия, за
+исключением случая, когда заряды сидят друг на друге. 
+
+Предположим, что такая точка $P$ существует. Рассмотрим положительный
+заряд в точке $P$. Для того, чтобы заряд был в равновесии, нужно:
+
+\begin{enumerate}
+\item Поле в этой точке должно быть равно нулю;
+\item Смещение заряда из $P$ в любую сторону должно вызывать силу,
+  направленную против смещения;
+\end{enumerate}
+
+Из второго пункта следует, что вектор электрического поля в 
+окрестности точки $P$ должен быть направлен в сторону точки
+$P$. Однако, по теореме Гаусса это будет означать, что внутри
+находится какой-то отрицательный заряд, что противоречит нашему
+исходному предположению. 
+
+Это утверждение верно и для более сложных конфигураций
+зарядов. Однако, не стоит думать, что равновесие невозможно вообще:
+если имеются дополнительные механические силы, то равновесие
+возможно. Однако в чисто электростатическом поле равновесие
+невозможно; этот факт называется \textbf{теоремой Ирншоу}. 
+
+Например, именно поэтому невозможна модель атома, в которой электроны
+неподвижны; именно поэтому Солнечная система до сих пор не развалилась
+за счёт того, что планеты вращаются вокруг Солнца (теорема Ирншоу
+применима к гравитационным силам тоже). Поэтому мы через некоторое
+время перейдём к задачам электродинамики. 
+
+\section{Электростатические аналогии. }
+\label{sec:es_analogs}
+
+Если две системы имеют одинаковые уравнения, то решения одной
+системы можно использовать для решения другой. Сейчас мы рассмотрим
+две ситуации, в которых наши знания из электростатики могут сильно
+помочь. 
+
+\subsection{Протекание тепла.}
+\label{sec:heat}
+
+Представим кусок какого-то материала, в котором температура меняется
+от точки к точке. Возникает перемещение тепла, которое мы обозначим
+$\vec{h}$. Это вектор, поскольку для потока тепла существенно
+направление. Это --- тепловая энергия, которая проходит через
+площадку, перпендикулярную вектору $\vec{h}$ за единицу времени. Каков
+физический смысл величины $\div \vec{h}$? Это --- скорость ухода тепла
+из данного места в единицу объёма. 
+
+Представим, что наше вещество нагревается изнутри за счёт
+какого-нибудь источника энергии, например, за счёт радиоактивного
+изотопа мощностью $P$ (это энергия, производимая источником в единицу
+времени). В силу того, что потоки тепла должны быть сбалансированы,
+получаем 
+
+\begin{equation}
+  \label{eq:heat_1}
+  \div \vec{h} = \vn \cdot \vec{h} = P.
+\end{equation}
+
+Кроме того, мы знаем, что вектор перемещения тепловой энергии зависит
+от скорости изменения температуры на данном участке. Чем больше
+разность температур, тем быстрее уходит энергия. Мы уже обсуждали, что
+изменение температуры в пространстве удобно мерять градиентом $\grad
+T$. Таким образом, из наших рассуждений получается, что 
+
+\begin{equation}
+  \label{eq:heat_2}
+  \vec{h} = - K \vn T. 
+\end{equation}
+
+Коэффициент $K$ (коэффициент пропорциональности) называется
+\textbf{коэффициентом теплопроводности} вещества. Склеивая эти два
+уравнения вместе, мы получаем 
+
+\begin{equation}
+  \label{eq:heat_3}
+  \vn \cdot (K \vn T) = -P.
+\end{equation}
+
+Это уравнение абсолютно эквиваленто уравнению Пуассона
+\eqref{eq:poisson_3} с точностью до переобозначений. Это означает, что
+если мы заменим $T$ на $\phi$ (а $\vec{h}$ на $\vec{E}$), то из
+термодинамической системы мы попадём в электростатическую! Более того,
+рассмотрим предельно простую ситуацию, когда источник тепла ---
+точечный (или мы имеем точечный заряд). В этом случае мы знаем, что
+потенциал спадает с расстоянием как $1/r$. Но то же самое можно
+сказать о температуре! Таким образом, мы получили зависимость
+температуры от расстояния пользуясь только лишь электростатической
+аналогией и ничего не решая.
+
+
+\begin{wrapfigure}{r}{40mm}
+  \vspace{-1.2cm}
+  \begin{center}
+    \includegraphics[width=4cm,height=4cm]{heat.pdf}
+  \end{center}
+  \vspace{-0.7cm}
+  \caption{Тепловой поток цилиндра.}
+  \label{fig:heat}
+\end{wrapfigure}
+
+
+В теории теплоты также очень хорошо сработает закон Гаусса. Пусть
+имеется цилиндр радиусом $r$, достаточно большой длиной $L$ и
+постоянной температурой $T_1$, которая поддерживается за счёт
+внутренних источников (пусть это будет нагретая провоолка внутри
+цилиндра). Цилиндр окружён теплопроводящим материалом с постоянной
+теплопроводностью $K$. Радиус этого внешнего слоя равен $R$. Чему
+равна температура на его поверхности?
+
+Будем решать эту задачу как электростатическую, по теореме Гаусса. Из
+симметрии ясно, что температура зависит только от расстояния от центра
+(также как потенциал зависит только от расстояния до центра
+заряженного цилиндра). Окружим наш цилиндр поверхностью радиусом $r_1$
+и длиной $L$. Площадь этой поверхности равна $S = 2\pi r_1 L$. Через
+эту поверхность проходит количество тепла $G = 2\pi r_1 h L$ (мы учли,
+что поле цилиндрически--симметрично) --- в электростатике, как мы
+помним, поток поля пропорционален электрическому заряду. В то же
+время, мы можем написать, что
+
+\begin{equation}
+  \label{eq:heated_cylinder_1}
+  h = -K \frac{dT}{dr_1}.
+\end{equation}
+
+Опять-таки, из-за сферической симметрии от градиента остаётся только
+лишь производная по радиусу. Это уравнение легко решить: 
+
+\begin{equation}
+  \label{eq:heated_cylinder_2}
+  \frac{dT}{dr_1} = -\frac{G}{2\pi K L r_1}, \quad T_2 - T_1 =
+  -\frac{G}{2\pi K L} \log \frac{R}{r}.
+\end{equation}
+
+Чему отвечает такая система в электростатике? Видно, что разность
+потенциалов зависит от расстояния до центра логарифмически. Также она
+зависит от параметра $G$, который в электростатике имеет смысл
+электрического заряда. Таким образом, можно сказать, что наш нагретый
+цилиндр --- это цилиндрический конденсатор в теории электричества.
+
+\subsection{Гидродинамика.}
+\label{sec:hydro}
+
+Вторая задача, решение которой может быть сведено к электростатике,
+--- задача о постоянном течении несжимаемой жидкости. Дело в том, что
+жидкость --- очень сложная для изучения среда и необходимы очень
+серьёзные приближения, чтобы можно было что-то сосчитать. Поле,
+которое нас интересует в гидродинамике --- поле скорости жидкости,
+$\vec{v}$. 
+
+Во-первых, будем считать, что в изучаемой нами области у жидкости нет
+источников и стоков. Если движение жидкости постоянно, то скорость
+$\vec{v}$ не зависит от времени. Пусть $\rho$ --- плотность жидкости,
+тогда $\rho \vec{v}$ --- масса жидкости, проходящей за единичное время
+через единичную площадку. Так как процессы рождения и исчезновения
+жидкости отсутствуют, то дивергенция потока массы отсутствует, т.е.
+
+\begin{equation}
+  \label{eq:hydro_1}
+  \vn \cdot (\rho \vec{v}) =0.
+\end{equation}
+
+Если предположить, что жидкость однородна и несжимаема, то плотность
+постоянна, и её можно вынести за знак дивергенции. Таким образом, у
+нас получается уравнение, напоминающее электростатику без зарядов: 
+
+\begin{equation}
+  \label{eq:hydro_2}
+  \vn \cdot \vec{v} = 0.
+\end{equation}
+
+Чтобы добиться окончательного сходства с электростатикой, нужно
+потребовать, чтобы течение жидкости было безвихревым. Этого можно
+добиться при определённых условиях, на которых мы сейчас не будем
+останавливаться. Условие безвихерового течения выглядит так: 
+
+\begin{equation}
+  \label{eq:hydro_3}
+  \vn \times \vec{v} = 0.
+\end{equation}
+
+Эти два уравнения и будут основой для установления аналогии с
+электростатикой. Мы уже видим, что наш вектор $\vec{v}$ играет здесь
+ту же роль, какую вектор $\vec{E}$ играет в электричестве. Можно
+заключить, что существует функция $\chi$, такая что
+
+\begin{equation}
+  \label{eq:hydro_4}
+  \vec{v} = - \vn \chi.
+\end{equation}
+
+
+\begin{wrapfigure}{r}{40mm}
+  \vspace{-1cm}
+  \begin{center}
+    \includegraphics[width=4cm,height=4cm]{fluid_lines.pdf}
+  \end{center}
+  \vspace{-0.7cm}
+  \caption{Обтекание шара.}
+  \label{fig:hydro}
+\end{wrapfigure}
+
+
+Рассмотрим теперь обтекание шара нашей медленной несжимаемой невязкой
+жидкостью. Примерная картика потоков жидкости приведена на
+рисунке. Наша задача будет состоять в определении зависимости скорости
+$\vec{v}$ жидкости от расстояния от центра шара $r$. Сначала мы найдём
+<<потенциал>> $\chi$, а потом возьмём от него градиент. Каким условиям
+должен удовлетворять потенциал? Во-первых, течение должно
+отсутствовать за поверхностью шара, это соответствует тому, что
+производная потенциала по радиусу на границе шара должна обращаться в
+ноль. Во-вторых, течение на бесконечности должно переходить в
+константу. Эти два условия можно записать так:
+
+\begin{equation}
+  \label{eq:hydro_bc}
+  \left.\frac{\pt \chi}{\pt r} = 0\right|_{r=a}, \quad \frac{\pt
+    \chi}{\pt x} = v_0, \quad r \gg a.
+\end{equation}
+
+Наша задача, таким образом, эквивалента электростатической системе без
+зарядов, но с однородным электрическим полем $\vec{E}_0$, в которую
+помещена диэлектрическая сфера. Если бы сферы не было, то потенциал
+всюду был бы равен $\phi = - E_0 z$. Однако, у нас есть сфера, которая
+всё портит. 
+
+Мы, однако, можем воспользоваться таким фактом: если мы угадаем
+решение, которое удовлетворяет уравнению Пуассона и граничным
+условиям \eqref{eq:hydro_bc}, то это решение будет
+единственным. Поэтому будем искать решение в виде 
+
+\begin{equation}
+  \label{eq:hydro_4}
+  \phi = -E_0 x + k\frac{px}{r^3}.
+\end{equation}
+
+Здесь $p$ --- параметр, который нам ещё предстоит определить. Заметим,
+что этот потенциал на больших расстояних стремится к $-E_0 x$, как и
+положено, согласно второму граничному условию. Второе слагаемое в
+потенциале --- поля диполя, и поэтому оно удовлетворяет уравнению
+Пуассона. Теперь надо подобрать $p$. Выразим $x$ через $r$ и угол
+$\theta$, получим
+
+\begin{equation}
+  \label{eq:hydro_5}
+  \phi = - E_0 r \cos \theta + k \frac{p r \cos \theta}{r^3}.
+\end{equation}
+
+Теперь приравняем производную по $r$ к нулю, получим
+
+\begin{equation}
+  \label{eq:hydro_6}
+  p = -2\pi \eps_0 a^3 E_0.
+\end{equation}
+
+Заметим, что если бы два слагаемых зависели от $\theta$ по-разному, мы
+бы не смогли подобрать $p$. Это доказывает правильность нашего
+первоначального решения искать $\phi$ именно в таком виде. Теперь
+потенциал может быть записан так: 
+
+\begin{equation}
+  \label{eq:hydro_7}
+  \phi = -E_0 \cos \theta \left(r + \frac{a^3}{2r^2} \right).
+\end{equation}
+
+Чтобы получить гидродинамический потенциал $\chi$, надо просто
+поменять пару букв. 
+
+\begin{equation}
+  \label{eq:hydro_8}
+  \chi = - v_0 \cos \theta \left(r + \frac{a^3}{2r^2} \right).
+\end{equation}
+
+Ответ для поля $\vec{v}$ приведён на картинке \ref{fig:hydro}.
 
 \end{document}
