--- a/em.tex
+++ b/em.tex
@@ -17,6 +17,7 @@
 \renewcommand{\div}{\mathrm{div}\,}
 \newcommand{\vn}{\vec{\nabla}}
 \newcommand{\eps}{\epsilon}
+\newcommand{\const}{\mathrm{const}}
 
 \graphicspath{{./pics/}}
 \title{Электродинамика}
@@ -31,7 +32,7 @@
 закону Кулона его напряжённость выражается формулой
 \begin{equation}
   \label{eq:coulomb}
-  \vec{E}(\vec{r}) = \frac{q \vec{r}}{r^3}.
+  \vec{E}(\vec{r}) =k \frac{q \vec{r}}{r^3}.
 \end{equation}
 
 Видно, что вектор $\vec{E}$ существует в любой точке пространства, вне
@@ -1404,11 +1405,11 @@ $\eps_0$.
 
 \begin{equation}
   \label{eq:def_pointing}
-  \vec{S} = c\, \vec{E} \times \vec{H}.
+  \vec{S} = \vec{E} \times \vec{H}.
 \end{equation}
 
-Здесь $c$ --- коэффициент пропорциональности, точный смысл которого
-выяснится позднее. 
+% Здесь $c$ --- коэффициент пропорциональности, точный смысл которого
+% выяснится позднее. 
 
 Теперь обсудим вопрос о превращении энергии. В каждой среде
 электрическая энергия непрерывно переходит в тепловую, причём
@@ -1417,13 +1418,14 @@ $\eps_0$.
 
 \begin{equation}
   \label{eq:def_heat_from_electric}
-  dt\, dV\, \frac{\eps_0j}{2} \vec{E}^2 \cdot const \equiv dt\, dV\,
-  \kappa \vec{E}^2.
+  dt\, dV\, \frac{\eps_0}{2} \vec{E}^2 \cdot \const \equiv dt\, dV\,
+  \sigma \vec{E}^2.
 \end{equation}
 
-Константа $\kappa$, стоящая в этом выражении, зависит исключительно от природы
-вещества, в котором рассеивается электрическая энергия. Для магнитной
-энергии аналогичного явления не существует. 
+Константа $\sigma$, стоящая в этом выражении, зависит исключительно от
+природы вещества, в котором рассеивается электрическая энергия. Она
+называется \textbf{проводимостью}. Для магнитной энергии аналогичного
+явления не существует.
 
 Вычислим происходящее за элемент времени $dt$ изменение
 электромагнитной энергии в какой-либо части нашего тела. Для этого
@@ -1431,7 +1433,7 @@ $\eps_0$.
 
 \begin{equation}
   \label{eq:conserv_energy_der_1}
-  \frac{dt}{2} \int dV \left( \eps_0 (E_x \dot{E}_x + E_y \dot{E}_y +
+  dt \int dV \left( \eps_0 (E_x \dot{E}_x + E_y \dot{E}_y +
     E_z \dot{E}_z) + \mu_0 (H_x \dot{H}_x + H_y \dot{H}_y +
     H_z \dot{H}_z) \right).
 \end{equation}
@@ -1448,7 +1450,7 @@ $\eps_0$.
 
 \begin{equation}
   \label{eq:conserv_energy_der_3}
-  dt \int dV\, \kappa \vec{E}^2.
+  dt \int dV\, \sigma \vec{E}^2.
 \end{equation}
 
 С точностью до знака мы можем написать уравнение баланса энергии: 
@@ -1459,7 +1461,7 @@ $\eps_0$.
   \frac{\eps_0}{2} \left(E_x \dot{E}_x + E_y \dot{E}_y +
     E_z \dot{E}_z \right) +   \frac{\mu_0}{2} \left(H_x \dot{H}_x + H_y \dot{H}_y +
     H_z \dot{H}_z \right) + \\
-+ \div \vec{S} + \kappa \left(E_x^2 + E_y^2 +E_z^2 \right) =0.
++ \div \vec{S} + \sigma \left(E_x^2 + E_y^2 +E_z^2 \right) =0.
 \end{eqnarray}
 
 Уравнение \eqref{eq:conserv_energy_der_4} представляет собой уравнение
@@ -1470,31 +1472,138 @@ $\eps_0$.
 
 \begin{equation}
   \label{eq:conserv_energy_der_5}
-  \eps_0 \dot{E}_x = c \left( \frac{\pt H_z}{y} - \frac{\pt H_y}{\pt
-      z}\right) - 4\pi \kappa E_x,
+  \eps_0 \dot{E}_x = \left( \frac{\pt H_z}{\pt y} - \frac{\pt H_y}{\pt
+      z}\right) - \sigma E_x,
 \end{equation}
 а при $H_x$ 
 \begin{equation}
   \label{eq:conserv_energy_der_5}
-  \mu_0 \dot{H}_x = - c \left( \frac{\pt E_z}{\pt y} - \frac{\pt
+  \mu_0 \dot{H}_x = -\left( \frac{\pt E_z}{\pt y} - \frac{\pt
       E_y}{\pt z}\right).
 \end{equation}
 
 Очевидно, что оставшиеся четыре коэффициента дадут похожие уравнения;
-их можно объединить в векторную форму: не раписывать всё по
-компонентам, а написать сразу для векторов: 
+их можно объединить в векторную форму: не расписывать всё по
+компонентам, а написать сразу для векторов.
 
 \begin{eqnarray}
   \label{eq:maxwell_half}
 \nn
-  \eps_0 \frac{\pt \vec{E}}{\pt t} &=& c\, \rot \vec{H} - 4\pi \kappa
+  \eps_0 \frac{\pt \vec{E}}{\pt t} &=& \rot \vec{H} - \sigma
   \vec{E},\\
-  \mu_0 \frac{\pt \vec{H}}{\pt t} &=& -c\, \rot \vec{E}.
+  \mu_0 \frac{\pt \vec{H}}{\pt t} &=& -\rot \vec{E}.
 \end{eqnarray}
 
-Это --- половина знаменитых \textbf{уравнений Максвелла}, описывающих
-взаимодействие электрического и магнитного полей в случае покоящихся
-источников. Ещё два уравнения обеспечиваются теоремой Гаусса
-\eqref{eq:theorem_gauss} и аналогичным соотношением для магнитного
-поля. 
+Для ещё большего упрощения этой записи можно ввести вектора $\vec{D} =
+\eps_0 \vec{E}$, $\vec{B} = \mu_0 \vec{H}$, а также вектор
+\textbf{тока} $\vec{J} = \sigma \vec{E}$. Возьмём теперь дивергенцию
+от второго уравнения Максвелла. Дивергенция ротора в правой части
+всегда равна нулю, так что получаем
+
+\begin{equation}
+  \label{eq:gauss_magnet}
+  \frac{\pt}{\pt t} \div \vec{B} = 0.
+\end{equation}
+
+Это означает, что если у нас с самого начала было немагнитное тело, то
+оно не сможет никогда стать источником магнитного поля (иначе
+дивергенция перестала бы быть равна нулю). Одиночных магнитных
+источников в природе не существует (т.е. не существует магнитных
+аналогов электрических зарядов). Таким образом, полная система
+уравнений, описывающая электромагнитное поле (\textbf{уравнения
+  Максвелла}), выглядит так:
+
+\begin{eqnarray}
+  \label{eq:maxwell_equations}
+  \nn
+  \rot \vec{E} &=& - \frac{\pt \vec{B}}{\pt t}, \qquad \div \vec{B} = 0,\\
+  \rot \vec{H} &=& \vec{J} + \frac{\pt \vec{D}}{\pt t}, \quad \div
+  \vec{D} = \rho.
+\end{eqnarray}
+
+\subsection{Согласованность уравнений Максвелла.}
+\label{sec:cons_maxwell}
+
+Разберём несколько следствий уравнений Максвелла. Во-первых,
+рассмотрим самую простую ситуацию --- статические поля. Поле
+называется статическим, если его конфигурация не меняется во времени;
+это означает, что производные полей по времени равны нулю. В нашем
+случае это даёт уравнения
+
+\begin{equation}
+  \label{eq:statics_maxwell_1}
+  \rot \vec{E} = 0, \quad \rot \vec{H} = \vec{J}.
+\end{equation}
+
+Первое уравнение означает, что электростатическое поле не имеет
+циркуляции. Мы уже знаем это свойство, так что сейчас мы просто
+проверили согласованность всех наших выводов. Второе уравнение следует
+разобрать подробнее. 
+
+Для того, чтобы конфигурация была статической, необходимо, чтобы ни в
+одной точке пространства не осуществлялась передача тепла. Таким
+образом, есть ещё дополнительное условие: $\sigma \vec{E}^2 =
+0$. Таким образом, либо проводимость $\sigma$ должна равняться нулю,
+либо само поле $\vec{E}$. В любом случае, ток тоже будет равен нулю,
+так что получаем
+
+\begin{equation}
+  \label{eq:statics_maxwell_2}
+  \rot \vec{H} = 0.
+\end{equation}
+
+Таким образом, магнетостатика и электростатика распадаются на два
+совершенно независимых семейства уравнений, что позволяет говорить о
+наложении электрических и магнитных полей. 
+
+\section{Магнетостатика.}
+\label{sec:magnetostatics}
+
+Посмотрим теперь, как будут выглядеть магнитные поля в стационарном
+случае (т.е. когда производные полей по времени равны нулю, но ток
+может протекать). Для начала введём \textbf{магнитный потенциал}
+$\vec{A}$. Заметим, что так как $\rot \vec{B} = 0$, то существует
+такой вектор, что 
+
+\begin{equation}
+  \label{eq:def_vector_potential}
+  \vec{B} = \rot \vec{A}.
+\end{equation}
+
+Подставляя это соотношение в уравнения Максвелла
+\eqref{eq:maxwell_equations}, получаем 
+
+\begin{equation}
+  \label{eq:laplace_vector_pot_1}
+  \rot \rot \vec{A} = \mu \vec{J}.
+\end{equation}
+
+Заметим теперь, что вектор $\vec{A}$ определён неоднозначно: мы можем
+добавить к нему градиент любого скаляра, и ничего не изменится (это
+называется \textbf{калибровочной инвариантностью}). Чтобы всё-таки
+как-то зафиксировать вектор $\vec{A}$, можно наложить на него,
+например, такое условие: $\div \vec{A} = 0$. 
+
+Далее, можно преобразовать уравнение
+\eqref{eq:laplace_vector_pot_1}. Заметим для этого, что $\rot \rot
+\vec{A} = \grad \div \vec{A} - \Delta \vec{A}$. Таким образом,
+получаем для нашего вектор--потенциала: 
+
+\begin{equation}
+  \label{eq:laplace_vector_pot_2}
+  \Delta \vec{A} = - \mu \vec{J}. 
+\end{equation}
+
+Заметим, что это уравнение очень похоже на уравнение Пуассона для
+скалярного потенциала \eqref{eq:poisson_3}. А раз мы знаем решение
+уравнение Пуассона для $\phi$, то можем легко по аналогии написать
+решение уравнения для $\vec{A}$: 
+
+\begin{equation}
+  \label{eq:solution_vector_pot}
+  \vec{A}(\vec{r}) = \int \frac{\vec{J}(\vec{r'})}{r} d\vec{r'}.
+\end{equation}
+
+Это выражение --- точная аналогия выражения для потенциала от
+произвольной системы зарядов. 
 \end{document}
